--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -225,13 +225,32 @@
     }
 
     .navbar-social-icons {
-        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        gap: 25px;
+        margin-top: auto;
         padding: 20px;
         border-top: 1px solid #151515;
+        width: 100%;
     }
 
     .navbar-social-icons a {
+        color: #fff;
         font-size: 24px;
+        transition: all 0.3s ease;
+        width: 45px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.05);
+        text-decoration: none;
+    }
+
+    .navbar-social-icons a:hover {
+        transform: translateY(-3px);
+        background-color: rgba(137, 143, 199, 0.2);
     }
 
     .nav-links.open ~ .navbar-newsletter {
